--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Lucas Peinado",
+  "license": "SEE LICENSE IN LICENSE.md",
+  "description": "Send your screen",
   "dependencies": {
     "express": "^4.21.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lucasengithub/directoabc.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lucasengithub/directoabc/issues"
+  },
+  "homepage": "https://github.com/lucasengithub/directoabc#readme"
 }
