--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "deno-start": "deno run --allow-net --allow-read index.js"
   },
   "keywords": [],
   "author": "Lucas Peinado",
