--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
-      "dev": "node index.js"
+        "start": "node index.js",
+        "dev": "node index.js"
     },
     "keywords": [],
     "author": "Lucas Peinado",
     "license": "SEE LICENSE IN LICENSE.md",
     "description": "Send your screen",
     "dependencies": {
-      "express": "^4.21.2",
-      "socket.io": "^4.8.1",
-      "uuid": "^11.1.0"
+        "deno": "^2.2.3",
+        "express": "^4.21.2",
+        "socket.io": "^4.8.1",
+        "uuid": "^11.1.0"
     }
-  }
+}
